--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <meta charset="UTF-8">
   <title>reflix</title>
   <link rel="stylesheet" href="public/normalize.css">
   <link rel="stylesheet" href="public/style.css">
@@ -10,4 +11,3 @@
   <script src="public/bundle.js"></script>
 </body>
 </html>
-  
